force-app/main/default/objects/Account/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to designate this Account as a Strategic Account.</description>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>