force-app/main/default/objects/Account/fields/Tax_Exempt_Cert_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Cert_Expiry_Date__c</fullName>
    <label>Tax Exempt Cert Expiry Date</label>
    <type>Date</type>
</CustomField>