force-app/main/default/objects/Account/fields/Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner__c</fullName>
    <formula>Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp; Territory__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner</label>
    <type>Text</type>
</CustomField>