force-app/main/default/objects/Account/fields/Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Total_AR__c</fullName>
    <description>Balance of money due to the Red Cross for goods and services on the Account. Includes invoiced transactions and pre-payments. </description>
    <formula>REPORT_Total_AR__c</formula>
    <inlineHelpText>Balance of money due to the Red Cross for goods and services on the Account. Includes invoiced transactions and pre-payments. </inlineHelpText>
    <label>Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>