force-app/main/default/objects/Account/fields/Waterpark__c.field-meta.xml
<CustomField>
    <fullName>Waterpark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates an account as an aquatics strategic target.  Not displayed on page layout, controlled centrally by Marketing &amp; Business Operations.</description>
    <label>Waterpark</label>
    <type>Checkbox</type>
</CustomField>