force-app/main/default/objects/Account/recordTypes/Bucket_Account.recordType-meta.xml
<RecordType>
    <fullName>Bucket_Account</fullName>
    <active>true</active>
    <description>The record type that represents Bucket Accounts which are used to store household accounts</description>
    <label>Bucket Account</label>
</RecordType>