force-app/main/default/objects/Account/validationRules/Account_Number_is_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_is_Numeric</fullName>
    <active>true</active>
    <description>Validates that the Account Number is numeric if not blank</description>
    <errorConditionFormula>AND(
LEN ( AccountNumber) &gt; 0,
NOT (ISNUMBER( AccountNumber )),
 $Setup.Validation_Rules__c.Bypass_Rules__c = false
)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number is not numeric</errorMessage>
</ValidationRule>