force-app/main/default/objects/Account/validationRules/Billing_Contact_Required_for_Invoicing.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Required_for_Invoicing</fullName>
    <active>true</active>
    <description>The Billing Contact is required for Invoicing Accounts. Invoicing Accounts are determined by the Preferred Payment Type=Invoice.</description>
    <errorConditionFormula>IF( AND(ISPICKVAL(Preferred_Payment_type__c, &#39;Invoice&#39;), ISBLANK(Billing_Contact__c ) ) , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Billing Contact must be listed on the Account when the Preferred Payment Type equals Invoicing</errorMessage>
</ValidationRule>