force-app/main/default/objects/Account/validationRules/Customer_PO_Expiration_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_PO_Expiration_Date_Required</fullName>
    <active>true</active>
    <description>If the Customer PO# is entered the Customer PO# Expiration Date is required</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Customer_PO__c)), 
ISBLANK(Customer_PO_Expiration_Date__c),
$Setup.Validation_Rules__c.Bypass_Rules__c = False )</errorConditionFormula>
    <errorDisplayField>Customer_PO_Expiration_Date__c</errorDisplayField>
    <errorMessage>If the Customer PO# is entered the Customer PO# Expiration Date is required</errorMessage>
</ValidationRule>