force-app/main/default/objects/Account/validationRules/Fax_Number_with_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Number_with_10_Digits</fullName>
    <active>true</active>
    <description>Fax number to be with 10 digits</description>
    <errorConditionFormula>IF( 

OR(ISBLANK(Fax), $Setup.Validation_Rules__c.Bypass_Rules__c ), 

false, 

NOT(REGEX(Fax, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>US Fax numbers should be in this format: (999) 999-9999</errorMessage>
</ValidationRule>