force-app/main/default/objects/Account/validationRules/Inherit_Parent_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Inherit_Parent_Terms</fullName>
    <active>true</active>
    <description>Validate if the Account has a Parent Account i.e is a Child Account</description>
    <errorConditionFormula>AND(Inherit_Parent_Terms__c,
  OR(  ISBLANK(ParentId) ))</errorConditionFormula>
    <errorMessage>Inherit Parent Terms is only available for Child Accounts</errorMessage>
</ValidationRule>