force-app/main/default/objects/Account/validationRules/Initial_Bucket_Account_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Bucket_Account_Creation</fullName>
    <active>true</active>
    <description>Bucket accounts that are newly created must be marked as having no spots taken</description>
    <errorConditionFormula>ISNEW() &amp;&amp; RecordType.Id ==  $Setup.Bucket_Account_Settings__c.Bucket_Account_RecordTypeID__c &amp;&amp;  Spots_Taken__c != 0</errorConditionFormula>
    <errorDisplayField>Spots_Taken__c</errorDisplayField>
    <errorMessage>Bucket accounts that are newly created must be marked as having no spots taken</errorMessage>
</ValidationRule>