force-app/main/default/objects/Account/validationRules/Payment_Status_Terminated.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Terminated</fullName>
    <active>true</active>
    <description>When Payment Status is terminated. Reason would need to be populated.</description>
    <errorConditionFormula>And(
ISPICKVAL(  Preferred_Payment_type__c , &quot;&quot;),
ISPICKVAL( Payment_Status__c , &quot;Terminated&quot;),
ISCHANGED(Red_Cross_PO_expiration_Date__c ) ,  $Setup.Validation_Rules__c.Bypass_Rules__c = false )</errorConditionFormula>
    <errorDisplayField>Red_Cross_PO_expiration_Date__c</errorDisplayField>
    <errorMessage>When Payment Status field is &quot;Terminated&quot;, Red Cross PO Expiration Date can NOT be populated. Please remove the date from the field.</errorMessage>
</ValidationRule>