force-app/main/default/objects/Account/validationRules/Payment_Status_Terminated_to_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Terminated_to_Pending</fullName>
    <active>true</active>
    <description>If status is set a Terminated you can not change to Pending before you change to other status first</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE( Payment_Status__c ),&quot;Terminated&quot;), (ISPICKVAL(Payment_Status__c ,&quot;Pending&quot;)),
 $Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Customer cannot go directly from &quot;Terminated&quot; to &quot;Pending&quot;.</errorMessage>
</ValidationRule>