force-app/main/default/objects/Account/validationRules/Prevent_Bucket_Account_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Bucket_Account_Name_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsNew() = false, RecordTypeId = &quot;012d000000098Wt&quot;,  ISCHANGED(Name),  $Setup.Validation_Rules__c.Bypass_Rules__c = false  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change Bucket account name!</errorMessage>
</ValidationRule>